# Parachain-Frotiner-EVM-template

./: README.md  cargo.toml  zombienet.toml
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  lib.rs  precompiles.rs
runtime/src/configs/: mod.rs
